syntax = "proto3";

package greet;

service GreetService{
    
    // Unary API
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // Streaming API
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
    
}

message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}


